--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Hello, World!</h1>
-    <h2>result: {{ result }}</h2>
+    <!-- <h2>result: {{ result }}</h2> -->
   </body>
 </html>
